@@ -2,7 +2,9 @@ package menu.repository;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import menu.domain.Menu;
+import menu.domain.MenuCategory;
 import menu.util.CsvReader;
 
 public class MenuRepository {
@@ -17,7 +19,7 @@ public class MenuRepository {
     public List<Menu> findAllByName(List<String> menuNames) {
         return menuNames.stream()
                 .map(this::findByName)
-                .toList();
+               .collect(Collectors.toList());
     }
 
     private Menu findByName(String menuNames) {
@@ -25,5 +27,11 @@ public class MenuRepository {
                 .filter(menu -> menu.isSameName(menuNames))
                 .findAny()
                 .orElseThrow(() -> new IllegalArgumentException("메뉴에 없는 이름입니다."));
+    }
+
+    public List<Menu> findAllByCategory(MenuCategory menuCategory) {
+        return MENUS.stream()
+                .filter(menu -> menu.getMenuCategory() == menuCategory)
+               .collect(Collectors.toList());
     }
 }
